--- a/app/src/main/res/layout/layout_dlg_list.xml
+++ b/app/src/main/res/layout/layout_dlg_list.xml
@@ -4,4 +4,5 @@
           android:layout_height="wrap_content"
           android:dividerHeight="0dp"
           android:divider="@android:color/transparent"
-          android:listSelector="@android:color/transparent"/>
+          android:listSelector="@android:color/transparent"
+        />
