1. 教室解决按下home键，再次进入教室，视频没有重新推流  2.教学能力，没有选择的时候，隐藏“已选择科目”的布局

--- a/app/src/main/res/layout/fragment_teaching_subject.xml
+++ b/app/src/main/res/layout/fragment_teaching_subject.xml
@@ -39,6 +39,9 @@
         <View style="@style/DividerHorizontal"/>
     </LinearLayout>
 
+    <View
+            android:id="@+id/selected_subject_divider"
+            style="@style/DividerHorizontal"/>
     <LinearLayout
             android:id="@+id/selected_subject_layout"
             android:layout_width="match_parent"
