--- a/app/src/main/res/layout/layout_search_organization_item.xml
+++ b/app/src/main/res/layout/layout_search_organization_item.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/search_organization_result"
         android:orientation="horizontal"
         android:background="@drawable/white_grey_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <cn.xiaojs.xma.ui.widget.RoundedImageView
+    <ImageView
             android:id="@+id/search_organization_head"
-            app:oval="true"
             android:scaleType="fitXY"
-            android:src="@drawable/default_portrait"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="@dimen/px30"
             android:layout_marginLeft="@dimen/px30"
