--- a/app/src/main/res/layout/layout_enroll_lesson_item.xml
+++ b/app/src/main/res/layout/layout_enroll_lesson_item.xml
@@ -57,11 +57,12 @@
                 android:layout_marginTop="@dimen/px30"
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_marginRight="@dimen/px30"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:textSize="@dimen/font_28px"
                 android:textColor="@color/white"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                />
 
         <cn.xiaojs.xma.ui.widget.LiveProgress
                 android:id="@+id/enroll_lesson_item_progress"
