--- a/app/src/main/res/layout/layout_lesson_operation.xml
+++ b/app/src/main/res/layout/layout_lesson_operation.xml
@@ -11,7 +11,7 @@
             android:paddingTop="@dimen/px30"
             android:paddingBottom="@dimen/px30"
             android:text="进入教室>>"
-            android:textColor="@color/font_orange"
+            android:textColor="@color/common_text"
             android:textSize="@dimen/font_26px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
