--- a/app/src/main/res/layout/layout_share_contact_book.xml
+++ b/app/src/main/res/layout/layout_share_contact_book.xml
@@ -12,7 +12,7 @@
             android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/check_all"
+                android:id="@+id/check_to_discussion"
                 android:padding="@dimen/px16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
                 android:textColor="@color/font_white"
                 android:textSize="@dimen/font_28px"
                 android:layout_gravity="center"
-                android:text="@string/share_to_all"/>
+                android:text="@string/send_to_discussion"/>
 
     </LinearLayout>
 
