--- a/app/src/main/res/layout/layout_talk_my_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_my_speaker_item.xml
@@ -35,18 +35,27 @@
             android:layout_marginRight="@dimen/px15"
             android:textColor="@color/font_blue"/>
 
-    <TextView
-            android:id="@+id/msg"
+    <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/portrait"
-            android:gravity="center_vertical"
             android:layout_below="@+id/time"
-            android:textSize="@dimen/font_26px"
             android:layout_marginRight="@dimen/px5"
+            android:gravity="center_vertical"
             android:layout_marginTop="@dimen/px5"
-            android:textColor="@color/font_white"
-            android:background="@drawable/cr_chat_my_speaker_bg"/>
+            android:background="@drawable/cr_chat_my_speaker_bg">
+        <TextView
+                android:id="@+id/msg_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/font_white"/>
 
+        <ImageView
+                android:id="@+id/msg_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"/>
+    </FrameLayout>
 
 </RelativeLayout>
