--- a/app/src/main/res/layout/layout_talk_other_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_other_speaker_item.xml
@@ -35,17 +35,25 @@
             android:textSize="@dimen/font_24px"
             android:textColor="@color/font_black"/>
 
-    <TextView
-            android:id="@+id/msg"
+    <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/portrait"
             android:gravity="center_vertical"
-            android:layout_below="@+id/name"
-            android:textSize="@dimen/font_26px"
             android:layout_marginLeft="@dimen/px5"
             android:layout_marginTop="@dimen/px5"
-            android:textColor="@color/font_white"
-            android:background="@drawable/cr_chat_other_speaker_bg"/>
-
+            android:layout_below="@+id/name"
+            android:background="@drawable/cr_chat_other_speaker_bg">
+        <TextView
+                android:id="@+id/msg_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/font_white"/>
+        <ImageView
+                android:id="@+id/msg_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"/>
+    </FrameLayout>
 </RelativeLayout>
