--- a/app/src/main/res/layout/layout_talk_other_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_other_speaker_item.xml
@@ -54,6 +54,7 @@
                 android:id="@+id/msg_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:scaleType="fitXY"
                 android:gravity="center_vertical"/>
     </FrameLayout>
 </RelativeLayout>
