--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,9 +40,10 @@
     <color name="link_hover">#0076ff</color>
     <color name="btn_blue">#0080ff</color>
     <!--font color-->
-    <color name="font_dark_gray">#8b8b8b</color>
-    <color name="font_gray">#bababa</color>
-    <color name="font_light_gray">#bfbfbf</color>
+    <color name="font_create_lesson_content">#777777</color>
+    <color name="font_dark_gray">#8a8a8a</color>
+    <color name="font_gray">#bebebe</color>
+    <color name="font_light_gray">#bebebe</color>
     <color name="font_black">#333333</color>
     <color name="font_blue">#0076ff</color>
     <color name="translucent_10_blue">#1f0076ff</color>
