--- a/app/src/main/res/layout/activity_select_subject.xml
+++ b/app/src/main/res/layout/activity_select_subject.xml
@@ -20,6 +20,7 @@
             android:paddingTop="@dimen/px30"
             android:paddingBottom="@dimen/px30"
             android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
             android:background="@color/main_orange">
 
         <TextView
