--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -167,6 +167,7 @@
                 android:id="@+id/my_order_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 style="@style/MinePageItem">
 
             <TextView
