--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,6 +11,7 @@
             android:layout_height="wrap_content"
             android:text="@string/message_notify_set"
             android:textStyle="normal"
+            android:visibility="gone"
             style="@style/MinePageItem"/>
 
     <View
