1. 教室发送图片报错，接收端报错

--- a/app/src/main/res/layout/layout_talk_my_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_my_speaker_item.xml
@@ -36,6 +36,7 @@
             android:textColor="@color/font_blue"/>
 
     <FrameLayout
+            android:id="@+id/msg_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/portrait"
