--- a/app/src/main/res/layout/layout_talk_other_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_other_speaker_item.xml
@@ -36,6 +36,7 @@
             android:textColor="@color/font_black"/>
 
     <FrameLayout
+            android:id="@+id/msg_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/portrait"
