--- a/app/src/main/res/layout/layout_moment_comment_item.xml
+++ b/app/src/main/res/layout/layout_moment_comment_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:background="@drawable/white_grey_selector"
               android:layout_width="match_parent"
@@ -13,10 +12,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <cn.xiaojs.xma.ui.widget.RoundedImageView
+        <ImageView
                 android:id="@+id/moment_comment_image"
-                app:oval="true"
-                android:src="@drawable/default_avatar"
+                android:src="@drawable/default_avatar_grey"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_width="@dimen/px80"
