--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -302,7 +302,7 @@
         <item name="android:layout_height">@dimen/item_head_icon_size</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_marginLeft">5dp</item>
-        <item name="android:src">@drawable/jmui_head_icon</item>
+        <item name="android:src">@drawable/default_avatar_grey</item>
         <item name="android:scaleType">fitXY</item>
     </style>
 
@@ -347,7 +347,7 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:layout_marginTop">5dp</item>
-        <item name="android:src">@drawable/jmui_head_icon</item>
+        <item name="android:src">@drawable/default_avatar_grey</item>
         <item name="android:scaleType">fitXY</item>
     </style>
 
