--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -63,7 +63,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            />
 
     <ImageView
             android:id="@+id/right_image2"
@@ -74,7 +75,7 @@
             android:paddingTop="@dimen/px16"
             android:paddingBottom="@dimen/px16"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
 
 </RelativeLayout>
