Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:groupIndicator="@drawable/ic_expand_selector"
+            android:scrollbars="none"
             style="@style/ex_listview_group"
             />
 
