--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -199,16 +199,17 @@
 
 
         <!--教学能力-->
-        <RelativeLayout
+        <LinearLayout
                 android:id="@+id/teach_ability_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/px20"
+                android:orientation="horizontal"
                 style="@style/MinePageItem">
 
             <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="match_parent"
+                    android:id="@+id/teach_ability_title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_26px"
@@ -218,21 +219,24 @@
 
             <TextView
                     android:id="@+id/teach_ability"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/enter_teach_ability"
+                    android:layout_weight="1.0"
                     android:textColor="@color/font_dark_gray"
                     android:textSize="@dimen/font_26px"
+                    android:maxLines="1"
+                    android:gravity="center_vertical|right"
+                    android:ellipsize="end"
                     android:text="@string/be_teacher"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="@dimen/px20"/>
 
             <ImageView
                     android:id="@+id/enter_teach_ability"
-                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_entrance"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <View
                 style="@style/DividerHorizontal"/>
