1. 个人头像模糊bug  2. 个人主页隐藏教室解决，个人签名不对的bug

--- a/app/src/main/res/layout/layout_person_home_header.xml
+++ b/app/src/main/res/layout/layout_person_home_header.xml
@@ -130,8 +130,10 @@
     </RelativeLayout>
 
     <View
+            android:id="@+id/hold_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/px30"
+            android:visibility="gone"
             android:background="@color/main_bg"/>
 
     <FrameLayout
