--- a/app/src/main/res/layout/layout_moment_ugc.xml
+++ b/app/src/main/res/layout/layout_moment_ugc.xml
@@ -40,6 +40,7 @@
             android:layout_marginLeft="@dimen/px30"
             android:drawablePadding="@dimen/px10"
             android:textSize="@dimen/font_24px"
+            android:visibility="gone"
             android:textColor="@color/common_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
