--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -16,7 +16,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:background="#000000"/>
 
         <!--推流视频view-->
         <cn.xiaojs.xma.ui.classroom.live.view.LiveRecordView
