--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -12,16 +12,17 @@
             android:layout_marginTop="@dimen/px42"
             android:background="@color/white">
         <TextView
-                android:id="@+id/curr_pwd_title"
+                android:id="@+id/phone_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="@dimen/px170"
-                android:text="@string/current_pwd"
+                android:text="@string/phone_num_"
                 android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
                 android:layout_marginLeft="@dimen/px34"/>
+
 
         <cn.xiaojs.xma.ui.widget.EditTextDel
                 android:id="@+id/curr_pwd"
@@ -30,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
-                android:hint="@string/current_pwd_hint"
+                android:hint="@string/login_reg_phone_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:textColorHint="@color/font_trans_white"
