1. 密码修改逻辑添加

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,6 +15,7 @@
             style="@style/MinePageItem"/>
 
     <View
+            android:visibility="gone"
             style="@style/DividerHorizontal"/>
 
     <!--账号安全-->
