--- a/app/src/main/res/layout/activity_modify_pwd.xml
+++ b/app/src/main/res/layout/activity_modify_pwd.xml
@@ -33,8 +33,8 @@
                 android:hint="@string/current_pwd_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:textColorHint="@color/font_trans_white"
-                android:textColor="@color/font_white"
+                android:textColorHint="@color/font_light_gray"
+                android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:layout_marginRight="@dimen/px34"
                 android:layout_toRightOf="@+id/curr_pwd_title"
@@ -65,17 +65,16 @@
         <cn.xiaojs.xma.ui.widget.EditTextDel
                 android:id="@+id/new_pwd"
                 android:background="@null"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
-                android:hint="@string/current_pwd_hint"
+                android:hint="@string/reg_pwd_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:textColorHint="@color/font_trans_white"
-                android:textColor="@color/font_white"
+                android:textColorHint="@color/font_light_gray"
+                android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
-                android:layout_marginRight="@dimen/px34"
                 android:layout_toLeftOf="@+id/hide_show_pwd"
                 android:layout_toRightOf="@+id/new_title"
                 android:maxLength="16"/>
@@ -86,7 +85,9 @@
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/hide_pwd"/>
+                android:padding="@dimen/px22"
+                android:layout_marginRight="@dimen/px12"
+                android:src="@drawable/hide_pwd_gray"/>
 
     </RelativeLayout>
 
