--- a/app/src/main/res/layout/layout_home_live_item.xml
+++ b/app/src/main/res/layout/layout_home_live_item.xml
@@ -89,7 +89,8 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="@dimen/px10"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content"
+                                android:visibility="gone"/>
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
