--- a/app/src/main/res/layout/layout_personal_info.xml
+++ b/app/src/main/res/layout/layout_personal_info.xml
@@ -93,6 +93,7 @@
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
