--- a/app/src/main/res/layout/layout_search_people_item.xml
+++ b/app/src/main/res/layout/layout_search_people_item.xml
@@ -42,7 +42,8 @@
                     android:layout_toRightOf="@id/search_people_item_name"
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
 
             <ImageView
                     android:id="@+id/search_people_relationship"
